--- a/PortfolioAboutMe.html
+++ b/PortfolioAboutMe.html
@@ -25,7 +25,7 @@
     <!-- Navigation -->
         <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center" >
             <img class="avatar" src="portfolio_images/profile.jpg" alt="profile" style="width:100%;">
-            <a href="PortfolioHome.html" class="w3-bar-item w3-button w3-padding-large">
+            <a href="index.html" class="w3-bar-item w3-button w3-padding-large">
                 <em class="fa fa-home w3-xxlarge"></em>
                 <p>Home</p>
             </a>
@@ -45,7 +45,7 @@
     <!-- For small screens, hidden on main -->
         <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
             <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
-              <a href="PortfolioHome.html" class="w3-bar-item w3-button" 
+              <a href="index.html" class="w3-bar-item w3-button" 
                 style="width:25% !important">Home</a>
               <a href="PortfolioResume&Certs.html" class="w3-bar-item w3-button" 
                 style="width:25% !important">About Me</a>
