page content updates

--- a/project_content/index.html
+++ b/project_content/index.html
@@ -18,6 +18,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script src="https://use.fontawesome.com/1f0c06a831.js"></script>
+        <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
         <script src="portfolioScript.js"></script>
     </head>
   
@@ -59,7 +61,7 @@
         <div class="w3-padding-large" id="PortfolioHome.html">
             <header class="w3-padding-64 w3-center" id="main">
                 <h1 class="title">Sabrina Slattery</h1>
-                <p class="title-caption">Software Engineer • Graduating May 2021</p><br>
+                <p class="title-caption"> Software Engineer • Web & Mobile App Developer </p><br>
                 <!-- jumbotron -->
                 <div class="jumbotron w3-padding-32" id="jumbo">
                     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -74,19 +76,20 @@
                             <div class="item active">
                                 <img src="portfolio_images/caro1.jpg" alt="grey bckgrd" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <p>My portfolio displaying techniques learned at<br> Notre Dame de Namur University</p>
+                                    <p> Welcome! <br><br> Check out my 'About Me' for my resume and my 'Portfolio' for
+                                        a look at my current and past projects.</p>
                                 </div>
                             </div>
                             <div class="item">
                                 <img src="portfolio_images/caro2.jpg" alt="sky bckgrd" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <p>HTML/CSS/Javascript<br>ReactJS, AngularJS<br>Bootstrap, JQuery, XML/AJAX Implementations</p>
+                                    <p> Currently looking for full-time software engineering positions. <br> Experienced in Java, Python, ReactJS, and Swift.</p>
                                 </div>
                             </div>
                             <div class="item">
                                 <img src="portfolio_images/caro3.jpg" alt="white bckgrd" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <p>Java, Python, SQL</p>
+                                    <p> Portfolio Website Created Using: <br> Bootsrap, ReactJS, MySQLWorkbench</p>
                                 </div>
                             </div>
                         </div>
@@ -109,7 +112,7 @@
                 <i class="fa fa-github w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
             <a href="http://www.instagram.com/coderbellabri/">
                 <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a><br><br>
-            <p>Created by Sabrina Slattery • Last Updated January 21 2021</p>
+            <p>Created by Sabrina Slattery • Last Updated July 6 2021</p>
         </div>
     </footer>
 </html>
