--- a/project_content/PortfolioContactMe.html
+++ b/project_content/PortfolioContactMe.html
@@ -18,6 +18,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script src="https://use.fontawesome.com/1f0c06a831.js"></script>
+        <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
         <script src="portfolioScript.js"></script>
     </head>
 
@@ -161,7 +163,7 @@
                 <i class="fa fa-github w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
             <a href="http://www.instagram.com/coderbellabri/">
                 <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a><br><br>
-            <p>Created by Sabrina Slattery • Last Updated January 21 2021</p>
+            <p>Created by Sabrina Slattery • Last Updated July 6 2021</p>
         </div>
     </footer>
 </html>
