--- a/project_content/index.html
+++ b/project_content/index.html
@@ -1,25 +1,30 @@
+<!-- 3-4 lines for what future editors will expect from this doc
+big picture view
+more documentation the better
+- accessibility, internationalization, security-->
+
 <!DOCTYPE html>
 <html lang>
     <head>
         <title>Welcome!</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+        <!-- CSS Stylesheets -->
         <link rel="stylesheet" type="text/css" href="projectstylesheet.css">
         <link rel="stylesheet" type="text/css" href="portfolioStyle.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <!-- Font Styles-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Great Vibes">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        
+        <!-- Font Sources -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script src="https://use.fontawesome.com/1f0c06a831.js"></script>
-        <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-        <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+        <!-- JS Source -->
         <script src="portfolioScript.js"></script>
     </head>
   
@@ -112,7 +117,7 @@
                 <i class="fa fa-github w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
             <a href="http://www.instagram.com/coderbellabri/">
                 <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a><br><br>
-            <p>Created by Sabrina Slattery • Last Updated July 6 2021</p>
+            <p>Created by Sabrina Slattery • Last Updated July 12 2021</p>
         </div>
     </footer>
 </html>
