--- a/project_content/PortfolioAboutMe.html
+++ b/project_content/PortfolioAboutMe.html
@@ -62,7 +62,7 @@
             <div class="w3-justify w3-padding-64" id="main">
                 <h2 style="text-align:center;font-weight: bold;">About Me</h2>
                 <hr>
-                <p style="text-align: center;">I am currently an undergraduate senior at Notre Dame de Namur University studying Computer Science. 
+                <p>I am currently an undergraduate senior at Notre Dame de Namur University studying Computer Science. 
                     I plan to graduate in May 2021 with a B.S. degree in Computer Science after several years of study.I am incredibly passionate 
                     about computer science – I started off my college career planning on becoming a neurosurgeon, but quickly decided that becoming 
                     a software engineer was my future. I transitioned into computer science through West Valley College and I am completing my degree
@@ -104,10 +104,12 @@
                         </div>
                     </div>
                 </div><br>
+                <hr>
                 <h2>Work Experience</h2>
                 <div>
 
-                </div>
+                </div><br>
+                <hr>
                 <h2>Coursework</h2>
                 <div>
 
@@ -124,7 +126,8 @@
                 <i class="fa fa-github w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
             <a href="http://www.instagram.com/coderbellabri/">
                 <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a><br><br>
-            <p>Created by Sabrina Slattery • Last Updated July 12 2021</p>
+            <p>Created by Sabrina Slattery • Designed Using W3Schools and Bootstrap Templates
+                • Last Updated July 13 2021</p>
         </div>
     </footer>
 </html>
