--- a/project_content/PortfolioPortfolio.html
+++ b/project_content/PortfolioPortfolio.html
@@ -43,7 +43,7 @@
                 <p style="padding-top: 2px;">Contact Me</p>
             </a>
         </nav>
-        
+
     <!-- For small screens, hidden on main -->
         <div class="w3-top w3-hide-large w3-hide-medium portfolio" id="myNavbar">
             <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
@@ -202,7 +202,8 @@
                 <i class="fa fa-github w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
             <a href="http://www.instagram.com/coderbellabri/">
                 <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a><br><br>
-            <p>Created by Sabrina Slattery • Created using 888  Last Updated July 12 2021</p>
+            <p>Created by Sabrina Slattery • Designed Using W3Schools and Bootstrap Templates
+                • Last Updated July 13 2021</p>
         </div>
     </footer>
 </html>
