--- a/project_content/index.html
+++ b/project_content/index.html
@@ -88,7 +88,8 @@ more documentation the better
                             <div class="item">
                                 <img src="portfolio_images/caro2.jpg" alt="sky bckgrd" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <p> Currently looking for full-time software engineering positions. <br> Experienced in Java, Python, ReactJS, and Swift.</p>
+                                    <p> Looking to join an innovative team as a full-time software engineer. 
+                                        <br> Experienced in Java, Python, ReactJS, and Swift.</p>
                                 </div>
                             </div>
                             <div class="item">
@@ -117,7 +118,8 @@ more documentation the better
                 <i class="fa fa-github w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
             <a href="http://www.instagram.com/coderbellabri/">
                 <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a><br><br>
-            <p>Created by Sabrina Slattery • Last Updated July 12 2021</p>
+                <p>Created by Sabrina Slattery • Designed Using W3Schools and Bootstrap Templates
+                    • Last Updated July 13 2021</p>
         </div>
     </footer>
 </html>
