--- a/project_content/PortfolioContactMe.html
+++ b/project_content/PortfolioContactMe.html
@@ -164,7 +164,8 @@
                 <i class="fa fa-github w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
             <a href="http://www.instagram.com/coderbellabri/">
                 <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a><br><br>
-            <p>Created by Sabrina Slattery • Last Updated July 12 2021</p>
+                <p>Created by Sabrina Slattery • Designed Using W3Schools and Bootstrap Templates
+                    • Last Updated July 13 2021</p>
         </div>
     </footer>
 </html>
