Content and CSS updates
- About Me updated information
- general CSS changes
- beginning adding Canvas social media

--- a/PortfolioPortfolio.html
+++ b/PortfolioPortfolio.html
@@ -173,9 +173,9 @@
                 </div>
                 <div class="divider"><br>
                     <strong>Security within the Cloud</strong>
-                        <br>Research Presentation<br><br>
+                        <br>(Research Presentation)<br><br>
                     <strong>Machine Learning and Cybersecurity</strong>
-                        <br>Research Presentation<br><br>
+                        <br>(Research Presentation)<br><br>
                     <div class="dropdown">
                         <button class="button projects button-img dropdown-toggle" data-toggle="dropdown">
                             Project Links<span class="caret"></span>
