--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ more documentation the better
                             <div class="item">
                                 <img src="portfolio_images/caro3.jpg" alt="white bckgrd" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <p> Portfolio Website Created Using: <br> Bootsrap, ReactJS, MySQLWorkbench</p>
+                                    <p> Portfolio Website Created Using: <br> Bootstrap, ReactJS, MySQLWorkbench</p>
                                 </div>
                             </div>
                         </div>
