--- a/PortfolioAboutMe.html
+++ b/PortfolioAboutMe.html
@@ -62,16 +62,24 @@
             <div class="w3-justify w3-padding-64" id="main">
                 <h2 style="text-align:center;font-weight: bold;">About Me</h2>
                 <hr>
-                <p>I am currently an undergraduate senior at Notre Dame de Namur University studying Computer Science. 
-                    I plan to graduate in May 2021 with a B.S. degree in Computer Science after several years of study.I am incredibly passionate 
-                    about computer science – I started off my college career planning on becoming a neurosurgeon, but quickly decided that becoming 
-                    a software engineer was my future. I transitioned into computer science through West Valley College and I am completing my degree
-                    with Notre Dame de Namur University. Through my undergraduate studies I have become fluent in Python, and I'm experienced in Java,
-                    web-devlopment languages such as javascript and HTML/CSS, and SQL. I've explored languages such as C++, Ruby, and Lua in previous
-                    work and I look forward to practicing all these more in a professional environment. I have found that I am interested in 
-                    Machine Learning and AI, as well as software security within cloud computing and front-end development.<br><br>Currently, 
-                    I am looking to become a software engineer and as always I am open to any and all advice, mentoring, or pointers for the field.
-                    <br><br>Dont forget to check out my portfolio – and thanks for visiting!<br>
+                <p> Hi! My name is Sabrina Slattery and I am a web developer, machine learning enthusiast, and future software engineer.  
+                    I recently graduated summa cum laude from Notre Dame de Namur University with a B.S., Computer Science and an excitement
+                    to start my career in tech.
+                    <br><br>
+                    During my undergraduate studies I have become fluent in Python and Java, as well as worked in-depth with web development and mobile app
+                    programming techniques. I have a passion for machine learning, specifically natural language processing (NLP) and deep learning, and 
+                    will be pursuing a masters in computational neursocience in the next few years. 
+                    <br><br>
+                    Currently, I'm working on an app-based non-profit organization to help Bay Area locals give back to their communities through volunteering. 
+                    I'm also looking to join a dynamic, innovative engineering team as a full-time software engineer. Feel free to contact me with any
+                    industry advice, job suggestions, or feedback – I would love to hear from you! 
+                    <br><br>
+                    If you would like to connect with me on LinkedIn, see my
+                    GitHub repositories, or follow me on my journey through the tech industry, you can find links to my social media profiles at the bottom of each page or 
+                    on my <a href="https://sabrinaslattery.github.io/online-portfolio/PortfolioContactMe.html">'Contact Me'</a> page.
+                    <br><br>
+                    Thank you for visiting!
+                    <br>
                 </p>
                 <hr>
                 <h2>Education</h2><br>
@@ -91,7 +99,7 @@
                             Attended: August 2018 – December 2020<br><br>
                             <img src="portfolio_images/WVC_Logo.png" alt="WVC" class="responsive" 
                             style="height:150px; width:150px;"><br><br>
-                            A.S. Liberal Arts: Science and Maths
+                            Completed Transfer Degree for <br>B.S., Computer Science
                         </div>
                     </div>
                     <div class="edu column">
