--- a/PortfolioContactMe.html
+++ b/PortfolioContactMe.html
@@ -63,7 +63,8 @@
             <div class="w3-justify w3-padding-64" id="main4">
                 <h2 class="font-contact">Contact Me</h2>
                 <hr>
-                <p>Want to get in touch? Find me on LinkedIn, GitHub, and Instagram.</p><br><br><br>
+                <p>Want to get in touch?</p>
+                <br>
 
                 <div class="insta">
                     <div class="flipbox">
@@ -119,7 +120,9 @@
                     </div>
                 </div>
             <!-- There's only a million breaks here bc I couldnt figure out how to format the p element below -->
-                <br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br>
+                <p>Find me on LinkedIn, GitHub, Canvas and Instagram.</p>
+                <br><br>
                 <p>Or fill out the form below and I'll get back to you as soon as I can!</p>
                 <hr>
                 <div class="container-contact responsive"><br><br>
