--- a/PortfolioAboutMe.html
+++ b/PortfolioAboutMe.html
@@ -1,3 +1,8 @@
+<!-- To-Do:
+1) Create collapsible animations (fluid motion)
+2) Make work experience into collapsible text
+ -->
+
 <!DOCTYPE html>
 <html lang>
     <head>
@@ -63,9 +68,9 @@
                 <h2 style="text-align:center;font-weight: bold;">About Me</h2>
                 <hr>
                 <p> Hi! My name is Sabrina Slattery and I am a web developer, machine learning enthusiast, and future software engineer.  
+                    <br><br>
                     I recently graduated summa cum laude from Notre Dame de Namur University with a B.S., Computer Science and an excitement
                     to start my career in tech.
-                    <br><br>
                     During my undergraduate studies I have become fluent in Python and Java, as well as worked in-depth with web development and mobile app
                     programming techniques. I have a passion for machine learning, specifically natural language processing (NLP) and deep learning, and 
                     will be pursuing a masters in computational neursocience in the next few years. 
@@ -111,7 +116,10 @@
                             B.S., Computer Science
                         </div>
                     </div>
-                </div><br>
+                </div>
+                <div class="divider note">
+                    <p>Select a box to learn more.</p>
+                </div>
                 <hr>
                 <h2>Work Experience</h2>
                 <div>
