--- a/index.html
+++ b/index.html
@@ -79,23 +79,23 @@ more documentation the better
                         <!-- Wrapper -->
                         <div class="carousel-inner text-center">
                             <div class="item active">
-                                <img src="portfolio_images/caro1.jpg" alt="grey bckgrd" style="width:100%;">
+                                <img src="portfolio_images/caro1.png" alt="grey bckgrd" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <p> Welcome! <br><br> Check out my 'About Me' for my resume and my 'Portfolio' for
+                                    <p style="color:white"> Welcome! <br><br> Check out my 'About Me' for my resume and my 'Portfolio' for
                                         a look at my current and past projects.</p>
                                 </div>
                             </div>
                             <div class="item">
-                                <img src="portfolio_images/caro2.jpg" alt="sky bckgrd" style="width:100%;">
+                                <img src="portfolio_images/caro2.png" alt="sky bckgrd" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <p> Looking to join an innovative team as a full-time software engineer. 
+                                    <p style="color:white"> Looking to join an innovative team as a full-time software engineer. 
                                         <br> Experienced in Java, Python, ReactJS, and Swift.</p>
                                 </div>
                             </div>
                             <div class="item">
-                                <img src="portfolio_images/caro3.jpg" alt="white bckgrd" style="width:100%;">
+                                <img src="portfolio_images/caro3.png" alt="white bckgrd" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <p> Portfolio Website Created Using: <br> Bootstrap, ReactJS, MySQLWorkbench</p>
+                                    <p style="color:white"> Portfolio Website Created Using: <br> Bootstrap, ReactJS, MySQLWorkbench</p>
                                 </div>
                             </div>
                         </div>
