More Style edits and DB removal
- DB code temporarily removed to allow js functionality

--- a/PortfolioContactMe.html
+++ b/PortfolioContactMe.html
@@ -64,7 +64,7 @@
                 <h2 class="font-contact">Contact Me</h2>
                 <hr>
                 <p>Want to get in touch?</p>
-                <br>
+                <br><br><br>
 
                 <div class="insta">
                     <div class="flipbox">
@@ -121,8 +121,8 @@
                 </div>
             <!-- There's only a million breaks here bc I couldnt figure out how to format the p element below -->
                 <br><br><br><br><br><br><br>
-                <p>Find me on LinkedIn, GitHub, Canvas and Instagram.</p>
-                <br><br>
+                <p>Find me on LinkedIn, GitHub and Instagram.</p>
+                <br>
                 <p>Or fill out the form below and I'll get back to you as soon as I can!</p>
                 <hr>
                 <div class="container-contact responsive"><br><br>
