content change on home page

--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ more documentation the better
                                 <img src="portfolio_images/caro2.png" alt="sky bckgrd" style="width:100%;">
                                 <div class="carousel-caption">
                                     <p style="color:white"> Looking to join an innovative team as a full-time software engineer. 
-                                        <br> Experienced in Java, Python, ReactJS, and Swift.</p>
+                                        <br> Experienced in Java, Python, Node.js, and Swift.</p>
                                 </div>
                             </div>
                             <div class="item">
                                 <img src="portfolio_images/caro3.png" alt="white bckgrd" style="width:100%;">
                                 <div class="carousel-caption">
-                                    <p style="color:white"> Portfolio Website Created Using: <br> Bootstrap, ReactJS, MySQLWorkbench</p>
+                                    <p style="color:white"> Website design created using <br> templates from Bootstrap and W3Schools. </p>
                                 </div>
                             </div>
                         </div>
