--- a/PortfolioAboutMe.html
+++ b/PortfolioAboutMe.html
@@ -1,6 +1,7 @@
 <!-- To-Do:
 1) Create collapsible animations (fluid motion)
 2) Make work experience into collapsible text
+3) Add coursework?
  -->
 
 <!DOCTYPE html>
@@ -123,13 +124,39 @@
                 <hr>
                 <h2>Work Experience</h2>
                 <div>
-
-                </div><br>
-                <hr>
-                <h2>Coursework</h2>
-                <div>
-
+                    <h4>Compass Group at Google | Mountain View, CA | 07/2019 - Present</h4>
+                    <h6>Team Lead – Full-Time</h6>
+                        <ul class="workex">
+                            <li>Supervises café staff and manages inventory, budgets, and orders using hospitality management software.</li>
+                            <li>Promoted from team member to team lead within a year.</li>
+                        </ul>
+                    <br>
+                    <h4>Camp EdventureMore | Los Gatos, CA | 06/2018 - 09/2018</h4>
+                    <h6>Technology Instructor – Seasonal</h6>
+                        <ul class="workex">
+                            <li>Taught campers Java and Lua through video game programming in Code Kingdoms, Roblox Studio, and Minecraft Turtle.</li>
+                            <li>Developed new Python projects and mentored campers through testing and debugging their software.
+                            </li>
+                        </ul>
+                    <br>
+                    <h4>Fuch Lab, Washington State University | Pullman, WA | 01/2016 - 01/2017</h4>
+                    <h6>Neuroscience Research Intern – Part-Time</h6>
+                        <ul class="workex">
+                            <li>Dedicated 20 hours per week to research during the school year and helped to secure 
+                                NIH funding for further exploration.</li>
+                            <li>Compiled, analyzed, and visualized research data using MySQL Workbench and JupyterLab.</li>
+                        </ul>
+                    <br>
+                    <h4>Presentation Robotics Club | San Jose, CA | 08/2013 - 05/2015</h4>
+                    <h6>Coding and Mechanics Team Member – Part-Time</h6>
+                        <ul class="workex">
+                            <li>Collaborated with team members on building, testing and debugging 3 award-winning robots.</li>
+                            <li>Performed 3-D design on SOLIDWORKS for part modification and fabrication..</li>
+                            <li>Programmed robot’s functional movements in C++ and JavaScript.</li>
+                        </ul>
+                    <br>
                 </div>
+                <br>
             </div>
         </div>
     </body>
