--- a/PortfolioPortfolio.html
+++ b/PortfolioPortfolio.html
@@ -1,3 +1,7 @@
+<!-- 
+    To-Do:
+    1) Fix DB links to projects!!
+-->
 <!DOCTYPE html>
 <html lang>
     <head>
@@ -63,7 +67,7 @@
             <div class="w3-justify w3-padding-64" id="main">
                 <h2 class="title-portfolio">Projects</h2>
                 <hr>
-
+<!-- Web Development projects -->
                 <div class="parallax-HTML">
                     <div class="caption">
                         <span class="caption-border cutout HTML">Web Development</span>
@@ -87,7 +91,7 @@
                         <strong>Note:</strong> Best viewed on a laptop or desktop.
                     </div>
                 </div>
-
+<!-- iOS Development projects -->
                 <div class="parallax-iOS">
                     <div class="caption">
                         <span class="caption-border cutout iOS">iOS Development</span>
@@ -114,7 +118,7 @@
                         <strong>Note:</strong> Best viewed on a laptop or desktop.
                     </div>
                 </div>
-
+<!-- Machine Learning projects -->
                 <div class="parallax-ML">
                     <div class="caption">
                         <span class="caption-border cutout ML">Machine Learning</span>
@@ -139,7 +143,7 @@
                         <strong>Note:</strong> Best viewed on a laptop or desktop.
                     </div>
                 </div>
-
+<!-- Mini Games projects -->
                 <div class="parallax-MiniGames">
                     <div class="caption">
                         <span class="caption-border cutout">Mini Games</span>
@@ -165,7 +169,7 @@
                         <strong>Note:</strong> Best viewed on a laptop or desktop.
                     </div>
                 </div>
-
+<!-- Specialty Projects -->
                 <div class="parallax-Other">
                     <div class="caption">
                         <span class="caption-border cutout Other">Specialty</span>
