--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<!-- 3-4 lines for what future editors will expect from this doc
-big picture view
-more documentation the better
-- accessibility, internationalization, security-->
+<!--
+    This is a website portfolio for Sabrina Slattery (me :) ) displaying software engineering projects, work experience, and allows
+    users to contact Sabrina via email.
+    Website content is divided into four sections: Home, About Me, Portfolio, and Contact Me.
+    
+    Content is still being developed for view on smaller screens.
+To-Do:
+    1) French version of website, toggled via nav bar toggles
+    2) Dark mode?
+-->
 
 <!DOCTYPE html>
 <html lang>
