Project Link temp fixes
- temporary fix of projects links while DB is being developed

--- a/PortfolioPortfolio.html
+++ b/PortfolioPortfolio.html
@@ -83,8 +83,8 @@
                             Project Links<span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li class="dropdown-header">Full-Stack Websites</li>
-                            <li><a href="">Online Portfolio</a></li>
-                            <li><a href="portfolio_projects/WASP_MusicStore_Lab5.zip" download>Fraklin Musicstore</a></li>
+                            <li><a href="https://sabrinaslattery.github.io/online-portfolio/index.html">Online Portfolio</a></li>
+                            <li><a href="" >Fraklin Musicstore</a></li>
                         </ul>
                     </div><br>
                     <div class="divider note">
@@ -109,9 +109,9 @@
                             Project Links<span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li class="dropdown-header">XCode - Swift</li>
-                            <li><a href="" download>OutReach</a></li>
-                            <li><a href="" download>Twitter</a></li>
-                            <li><a href="" download>Flixster</a></li>
+                            <li><a href="https://github.com/sabrinaslattery/senior-project-spring21">OutReach</a></li>
+                            <li><a href="https://github.com/sabrinaslattery/Twitter-alias">Twitter</a></li>
+                            <li><a href="https://github.com/sabrinaslattery/Flix">Flix</a></li>
                         </ul>
                     </div><br>
                     <div class="divider note">
