profile image updates
- updated profile images on contact me page

--- a/PortfolioContactMe.html
+++ b/PortfolioContactMe.html
@@ -78,7 +78,7 @@
                                     <a href="http://www.instagram.com/coderbellabri/">@coderbellabri</a>
                                 </h2>
                                 <a href="http://www.instagram.com/coderbellabri/">
-                                    <img src="portfolio_images/igprofile.png" alt="instagram profile"></a>
+                                    <img src="portfolio_images/profile.jpg" alt="instagram profile"></a>
                             </div>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                                     <a href="http://www.linkedin.com/in/sabrina-slattery-803076171">Sabrina Slattery</a>
                                 </h2>
                                <a href="http://www.linkedin.com/in/sabrina-slattery-803076171">
-                                    <img src="portfolio_images/profile.jpg" alt="linkedin profile"></a>
+                                    <img src="portfolio_images/profile_linkedin.png" alt="linkedin profile"></a>
                             </div>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                                     <a href="http://github.com/sabrinaslattery">sabrinaslattery</a>
                                 </h2>
                                 <a href="http://github.com/sabrinaslattery">
-                                <img src="portfolio_images/profile_github.png" alt="github profile"></a>
+                                <img src="portfolio_images/profile.jpg" alt="github profile"></a>
                             </div>
                         </div>
                     </div>
