folder cleanup and minor changes

--- a/PortfolioAboutMe.html
+++ b/PortfolioAboutMe.html
@@ -27,6 +27,7 @@
         <script src="https://use.fontawesome.com/1f0c06a831.js"></script>
         <!-- JS Source -->
         <script src="portfolioScript.js"></script>
+        <script src="data_retrieval.js"></script>
     </head>
 
     <body>
@@ -68,7 +69,9 @@
             <div class="w3-justify w3-padding-64" id="main">
                 <h2 style="text-align:center;font-weight: bold;">About Me</h2>
                 <hr>
-                <p> Hi! My name is Sabrina Slattery and I am a web developer, machine learning enthusiast, and future software engineer.  
+                <form action="aboutMe" method="POST"></form>
+                    <!-- 
+                    Hi! My name is Sabrina Slattery and I am a web developer, machine learning enthusiast, and future software engineer.  
                     <br><br>
                     I recently graduated summa cum laude from Notre Dame de Namur University with a B.S., Computer Science and an excitement
                     to start my career in tech.
@@ -84,9 +87,8 @@
                     GitHub repositories, or follow me on my journey through the tech industry, you can find links to my social media profiles at the bottom of each page or 
                     on my <a href="https://sabrinaslattery.github.io/online-portfolio/PortfolioContactMe.html">'Contact Me'</a> page.
                     <br><br>
-                    Thank you for visiting!
+                    Thank you for visiting! -->
                     <br>
-                </p>
                 <hr>
                 <h2>Education</h2><br>
                 <div class="edu row">
