--- a/PortfolioPortfolio.html
+++ b/PortfolioPortfolio.html
@@ -205,7 +205,8 @@
             <a href="http://github.com/sabrinaslattery">
                 <i class="fa fa-github w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
             <a href="http://www.instagram.com/coderbellabri/">
-                <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a><br><br>
+                <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
+                <br><br>
             <p>Created by Sabrina Slattery • Designed Using W3Schools and Bootstrap Templates
                 • Last Updated July 13 2021</p>
         </div>
