setup of mysql database connection

--- a/PortfolioAboutMe.html
+++ b/PortfolioAboutMe.html
@@ -69,7 +69,7 @@
             <div class="w3-justify w3-padding-64" id="main">
                 <h2 style="text-align:center;font-weight: bold;">About Me</h2>
                 <hr>
-                <form action="aboutMe" method="POST"></form>
+                <form action="/aboutMe" method="POST"></form>
                     <!-- 
                     Hi! My name is Sabrina Slattery and I am a web developer, machine learning enthusiast, and future software engineer.  
                     <br><br>
