--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ To-Do:
         <script src="https://use.fontawesome.com/1f0c06a831.js"></script>
         <!-- JS Source -->
         <script src="portfolioScript.js"></script>
+        <script src="data_retrieval.js"></script>
     </head>
   
     <body>
@@ -125,7 +126,7 @@ To-Do:
             <a href="http://www.instagram.com/coderbellabri/">
                 <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a><br><br>
                 <p>Created by Sabrina Slattery • Designed Using W3Schools and Bootstrap Templates
-                    • Last Updated July 13 2021</p>
+                    • Last Updated July 19 2021</p>
         </div>
     </footer>
 </html>
